Initial version of a GDAL datastore using Panama for the binding to the native GDAL library. Work by Quentin Bialota, refactored as below (the original commit is not in this history):
* Group bindings in a single `org.apache.sis.storage.gdal` package.
* Remove unused and unimplemented methods, constants and enumerations.
* Make GDAL methods static and merge PanamaUtils and GdalOgr with GDAL.
* Remove redundant GDAL	or other prefixes in class and method names.
* Remove `GdalSampleDimension` because its `dataType` is not applicable.
* Split `GdalResource` in a few classes, and make package-private.
* Use `java.lang.ref.Cleaner` as a safety if user does not call	`close()`.
* Use `StorageConnector` in `GDALStore` constructor.
* Move some methods to dedicated `Driver` class.
* Add missing license headers.